Fix searchbar being too long

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ nav > a {
 
 .main {
   height: 100%;
-  width: 100%;
+  /* width: 100%; */
   justify-content: center;
 }
 
